flowc/tests/fixtures/check_e140_field_suggestion.expected.err
tests/fixtures/check_e140_field_suggestion.flow:8:5: error[E140]: no field 'cst' on type 'R'; did you mean 'cost'?
