flowc/tests/fixtures/check_e140_field_suggestion.flow
type R = { score: int, cost: int }

tool t(a: int) -> R
  effect model("m")

flow f(int) -> int {
  r = t(it)
  r.cst
}
